# TwitchyGamesVideos

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
tests/: conftest.py  monitoring_test.py
twitchybackend/: app.py  db.py  utils.py
twitchybackend/api/: __init__.py  monitoring.py  twitch.py
twitchybackend/clients/: twitch.py
twitchybackend/models/: game.py
twitchybackend/scheduler/: asyncscheduledtask.py  build_game_db.py  gamecollectionbuilder.py  scheduledtask.py  scheduler.py
twitchyfrontend/: README.md  index.html  package-lock.json  package.json
twitchyfrontend/src/: App.vue  types.ts
twitchyfrontend/src/assets/: main.css
twitchyfrontend/src/components/: GameBox.vue  GameVideos.vue  Loading.vue  SearchGame.vue
